add board and snake style to main.css file.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body onkeydown='updateMovement(event)'>
-  <div style="width:500px; height: 500px; background-color: aqua">
+  <div class='board'>
     <div id='mainDiv'>
-      <div>0</div>
+      <div class='snake'></div>
     </div>
   </div>
 </body>
