fix the right and top movement problem

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onkeydown='updateMovement(event)'>
   <div class='board'>
-    <div id='mainDiv'>
+    <div id=1>
       <div class='snake'></div>
     </div>
   </div>
