Working for multiple length but bad idea of putting hard coded length.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
     <div id=1>
       <div class='snake'></div>
     </div>
+    <div id=2>
+      <div class='snake'></div>
+    </div>
+    <div id=3>
+      <div class='snake'></div>
+    </div>
+    <div id=4>
+      <div class='snake'></div>
+    </div>
+    <div id=5>
+      <div class='snake'></div>
+    </div>
+    <div id=6>
+      <div class='snake'></div>
+    </div>
+    <div id=7>
+      <div class='snake'></div>
+    </div>
   </div>
 </body>
 
