--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body onkeydown='updateMovement(event)'>
   <div class='board'>
+    <div id='obstacle' class='obs'></div>
     <div id=1>
       <div class='snake'></div>
     </div>
