for multiple body parts its working

--- a/index.html
+++ b/index.html
@@ -10,27 +10,9 @@
 
 <body onkeydown='updateMovement(event)'>
   <div class='board'>
-    <div id='obstacle' class='obs'></div>
-    <div id=1>
-      <div class='snake'></div>
-    </div>
-    <div id=2>
-      <div class='snake'></div>
-    </div>
-    <div id=3>
-      <div class='snake'></div>
-    </div>
-    <div id=4>
-      <div class='snake'></div>
-    </div>
-    <div id=5>
-      <div class='snake'></div>
-    </div>
-    <div id=6>
-      <div class='snake'></div>
-    </div>
-    <div id=7>
-      <div class='snake'></div>
+    <div id="snake">
+      <div id='obstacle' class='obs'></div>
+      <div id=1 class='snakeBody'></div>
     </div>
   </div>
 </body>
