completed  snake but need to refactor it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class='board'>
     <div id="snake">
       <div id='obstacle' class='obs'></div>
-      <div id=0 class='snakeBody'></div>
+      <div id=0 class='snakeHead'></div>
     </div>
   </div>
 </body>
