refactor some code and add the image of apple for food to eat for snake.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body onkeydown='updateMovement(event)'>
   <div class='board'>
     <div id="snake">
-      <div id='obstacle' class='obs'></div>
+      <div id='obstacle' class='obstacle'> 
+        <img src="/snakeImage.jpg" alt="snake">
+      </div>
       <div id=0 class='snakeHead'></div>
     </div>
   </div>
