added end condition if it touches wall snake will die.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body onkeydown='updateMovement(event)'>
   <div style='width:1000px'>
-    <div class='board'>
+    <div id='board' class='board'>
       <div id="snake">
         <div id='food'>
           <img src='snakeImage.jpg' class='food' alt="caterPillar">
