format snake head and snake body.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id='board' class='board'>
       <div id="snake">
         <div id='food'>
-          <img src='snakeImage.jpg' class='food' alt="caterPillar">
+          <img src='food.jpg' class='food' alt='food'>
         </div>
         <div id=0 class='snakeHead'></div>
       </div>
