--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </canvas>
 </head>
 
-<body onkeydown='updateMovement(event)'>
+<body onkeydown='updateMove(event)'>
   <div style='width:1000px'>
     <div id='board' class='board'>
       <div id="snake">
@@ -19,7 +19,13 @@
       </div>
     </div>
   </div>
-  <button class='startButton' onclick='startGame()'>start game</button>
+  <div class="buttons">
+    <button class='button' onclick='startGame()'>Start Game</button>
+    <button class='button' onclick='moveRight()'>Move Right</button>
+    <button class='button' onclick='moveLeft()'>Move Left</button>
+    <button class='button' onclick='moveUp()'>Move Up</button>
+    <button class='button' onclick='moveDown()'>Move Down</button>
+  </div>
 </body>
 
 </html>
